@@ -1,3 +1,8 @@
+2006-11-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/29759
+	* gfortran.dg/gomp/pr29759.f90: New test.
+
 2006-11-13  Richard Guenther  <rguenther@suse.de>
 
 	Backport form mainline:
